--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,6 @@
 <nav>
   <a routerLink="/home" routerLinkActive="active">Home</a>
   <a routerLink="/about" routerLinkActive="active">About</a>
+  <a routerLink="/login" routerLinkActive="active" style="float:right">Login</a>
 </nav>
 </div>
